<resources>
    <string name="app_name">Helpful Sense</string>

    <string name="alert">Alert</string>
    <string name="message">Message</string>
    <string name="contacts">Contacts</string>
    <string name="edit_contacts">Edit contacts</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter message</string>
    <string name="add_action">Add action</string>
    <string name="danger">Danger</string>
    <string name="medical">Medical</string>
    <string name="transport">Transport</string>
    <string name="shake_msg">Shook phone. Sensing danger.</string>
    <string name="sms">SMS</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="actions_empty">No actions added</string>
    <string name="empty_contacts">No contacts added</string>
    <string name="edit_action">Edit action</string>
    <string name="add_widget">Add widget</string>
    <string name="alert_msg">I need help. Emergency.</string>
    <string name="loc_permission">Send your location to your trusted contacts in case of emergency.</string>
    <string name="sms_permission">Send emergency SMS to your selected trusted people</string>
    <string name="contact_permission">Select your most trusted contacts who will receive your emergency texts.</string>
    <string name="low_battery_message">Battery low.</string>
    <string name="disabled">Disabled</string>
    <string name="safety_service_title">Safety Service</string>
    <string name="safety_service_text">We are ready for your safety!</string>
    <string name="stop">Stop</string>
    <string name="progress_noti_title">Starting service</string>
    <string name="progress_noti_text">Please wait while we initialize your sensors and GPS…</string>
    <string name="sms_sent">SMS sent!</string>
    <string name="quick_actions_title">Quick actions</string>
    <string name="quick_actions_desc">Save custom messages to send in case of emergency with location at one tap</string>
    <string name="autostart_title">Battery and boot</string>
    <string name="autostart_desc">Start listening for sensors when device is booted up. Send message when battery low so your loved ones don\'t worry</string>
    <string name="quick_gestures_title">Quick gestures</string>
    <string name="quick_gestures_desc">Shake your phone to send emergency SMS to trusted contacts</string>
    <string name="emergency_contacts_title">Select contacts</string>
    <string name="emergency_contacts_desc">Select contacts you trust to send your location and message to get help</string>
    <string name="shortcut_alert_short_label">Alert</string>
    <string name="shortcut_alert_long_label">Emergency alert</string>
    <string name="alert_disabled_message">Emergency alert disabled</string>
    <string name="action_disabled_message">Action disabled</string>

    <string name="pref_first" translatable="false">pref_first</string>
    <string name="pref_low_battery" translatable="false">pref_low_battery</string>
    <string name="pref_shutdown" translatable="false">pref_shutdown_contact</string>
    <string name="pref_help" translatable="false">pref_help</string>
    <string name="pref_threshold" translatable="false">pref_threshold</string>
    <string name="pref_time_stop" translatable="false">pref_time_stop</string>
    <string name="key_tab" translatable="false">key_tab</string>
</resources>