<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        android:title="SMS"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:key="@string/pref_low_battery"
            android:title="SMS when low battery"
            android:defaultValue="false"
            android:summaryOn="Let trusted people know battery low"
            android:summaryOff="Don't let anyone know"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="Shake phone"
        app:iconSpaceReserved="false">
        <EditTextPreference
            android:key="@string/pref_threshold"
            android:title="Threshold"
            android:defaultValue="@integer/def_threshold"
            android:inputType="number"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:key="@string/pref_time_stop"
            android:title="Time before shake stopped"
            android:defaultValue="@integer/def_time_stop"
            android:inputType="number"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>